img lazy loading and landscape to 100% hight to avoid layout shifting

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,5 +1,5 @@
 .gallery {
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,7 +61,7 @@ img.image-visible {
 
 .landscape {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
 
